--- a/eventportal-event-generator/pom.xml
+++ b/eventportal-event-generator/pom.xml
@@ -113,6 +113,7 @@
 		</dependency>
 	</dependencies>
 
+	<!--
 	<build>
 		<plugins>
 			<plugin>
@@ -120,6 +121,43 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<mainClass>com.solace.amartens.eventportal.v2.eventgenerator.SolaceEventGenerator</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	-->
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.4.2</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.solace.amartens.eventportal.v2.eventgenerator.SolaceEventGenerator</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
