--- a/asyncapi-parser/pom.xml
+++ b/asyncapi-parser/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>17</java.version>
 		<jackson.version>2.11.2</jackson.version>
 	</properties>
 
