--- a/event-transformer/pom.xml
+++ b/event-transformer/pom.xml
@@ -11,7 +11,7 @@
 
 	<packaging>jar</packaging>
 
-	<artifactId>EventConsumer</artifactId>
+	<artifactId>EventTransformer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -19,21 +19,63 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.1</spring-cloud.version>
+		<spring-cloud-solace.version>3.4.0</spring-cloud-solace.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.solacesystems</groupId>
-			<artifactId>sol-jms</artifactId>
-			<version>10.17.0</version>
+			<groupId>com.solace.amartens</groupId>
+			<artifactId>EventPortalRestApiClient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.solace</groupId>
-			<artifactId>solace-opentelemetry-jms-integration</artifactId>
-			<version>1.0.0</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.solace.spring.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-solace</artifactId>
+			<version>${spring-cloud-solace.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.networknt</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>1.0.77</version>
 		</dependency>
 	</dependencies>
 
+	<!--
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+	-->
 	<build>
 		<plugins>
 			<plugin>
@@ -43,11 +85,6 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>com.solace.amartens.eventconsumer.EventQueueJMSConsumer</mainClass>
-						</manifest>
-					</archive>
 				</configuration>
 				<executions>
 					<execution>
